nova solucao paliativa para cors